--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ web/build/*.json
 !web/build/build.stats.json
 bashrc.server
 bashrc.local
+env.list
 
 # Created by https://www.gitignore.io/api/osx,node,visualstudiocode
 
