--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "start-copyeveryday-dev": "source bashrc.local; cd scripts; node copyEveryDay.js --harmony",
     "start-computetask-dev": "source bashrc.local; cd scripts; node computeTask.js --harmony",
     "start-instantcompute-dev": "source bashrc.local; cd scripts; node instantTask.js --harmony",
-    "start-api": "source bashrc.server; cd api; node server.js --harmony",
-    "start-network": "source bashrc.server; cd network; node server.js --harmony",
-    "start-copyone": "source bashrc.server; cd scripts; node copyOne.js --harmony",
-    "start-copyall": "source bashrc.server; cd scripts; node copyAll.js --harmony",
-    "start-copyeveryday": "source bashrc.server; cd scripts; node copyEveryDay.js --harmony",
-    "start-computetask": "source bashrc.server; cd scripts; node computeTask.js --harmony",
-    "start-instantcompute": "source bashrc.local; cd scripts; node instantTask.js --harmony"
+    "start-api": "cd api; node server.js --harmony",
+    "start-network": "cd network; node server.js --harmony",
+    "start-copyone": "cd scripts; node copyOne.js --harmony",
+    "start-copyall": "cd scripts; node copyAll.js --harmony",
+    "start-copyeveryday": "cd scripts; node copyEveryDay.js --harmony",
+    "start-computetask": "cd scripts; node computeTask.js --harmony",
+    "start-instantcompute": "cd scripts; node instantTask.js --harmony"
   },
   "author": "yan",
   "license": "MIT",
