--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start-copyone": "cd scripts; node copyOne.js --harmony",
     "start-copyall": "cd scripts; node copyAll.js --harmony",
     "start-copyeveryday": "cd scripts; node copyEveryDay.js --harmony",
-    "start-computetask": "cd scripts; node computeTask.js --harmony",
+    "start-computetask": "cd scripts; node computeTasks.js --harmony",
     "start-instantcompute": "cd scripts; node instantTask.js --harmony"
   },
   "author": "yan",
