--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start-copyall-dev": "source bashrc.local; cd scripts; node copyAll.js --harmony",
     "start-copyeveryday-dev": "source bashrc.local; cd scripts; node copyEveryDay.js --harmony",
     "start-computetask-dev": "source bashrc.local; cd scripts; node computeTasks.js --harmony",
-    "start-instantcompute-dev": "source bashrc.local; cd scripts; node instantTask.js --harmony",
+    "start-instantcompute-dev": "source bashrc.server; cd scripts; node instantTask.js --harmony",
     "start-api": "cd api; node server.js --harmony",
     "start-network": "cd network; node server.js --harmony",
     "start-copyone": "cd scripts; node copyOne.js --harmony",
