--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
     "start": "",
     "start-api-dev": "source bashrc.local; cd api; gulp debug-api --harmony",
     "start-network-dev": "source bashrc.local; cd api; gulp debug-network --harmony",
-    "start-copyone-dev": "source bashrc.local; cd scripts; node copyOne.js --harmony",
+    "start-copyone-dev": "source bashrc.server; cd scripts; node copyOne.js --harmony",
     "start-copyall-dev": "source bashrc.local; cd scripts; node copyAll.js --harmony",
     "start-copyeveryday-dev": "source bashrc.local; cd scripts; node copyEveryDay.js --harmony",
     "start-computetask-dev": "source bashrc.local; cd scripts; node computeTasks.js --harmony",
-    "start-instantcompute-dev": "source bashrc.server; cd scripts; node instantTask.js --harmony",
+    "start-instantcompute-dev": "source bashrc.server; cd scripts; node instantCompute.js --harmony",
     "start-api": "cd api; node server.js --harmony",
     "start-network": "cd network; node server.js --harmony",
     "start-copyone": "cd scripts; node copyOne.js --harmony",
     "start-copyall": "cd scripts; node copyAll.js --harmony",
     "start-copyeveryday": "cd scripts; node copyEveryDay.js --harmony",
     "start-computetask": "cd scripts; node computeTasks.js --harmony",
-    "start-instantcompute": "cd scripts; node instantTask.js --harmony"
+    "start-instantcompute": "cd scripts; node instantCompute.js --harmony"
   },
   "author": "yan",
   "license": "MIT",
